k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hera-be
  labels:
    app: hera-be
spec:
  selector:
    matchLabels:
      app: hera-be
  template:
    metadata:
      labels:
        app: hera-be
    spec:
      containers:
        - image: acrkongastage.azurecr.io/hera-be:latest
          name: hera-be
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          # Applications
