k8s/staging/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: hera-be-redis
  labels:
    app: hera-be-redis
spec:
  ports:
    - port: 6379
  selector:
    app: hera-be-redis
    tier: redis
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hera-be-redis
  labels:
    app: hera-be-redis
spec:
  selector:
    matchLabels:
      app: hera-be-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hera-be-redis
        tier: redis
    spec:
      containers:
        - image: redis:3.2
          name: redis
          command: ["redis-server", "--appendonly", "yes"]
          ports:
            - containerPort: 6379
              name: redis
