k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hera-be
  labels:
    app: hera-be
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: hera-be
